[package]
name = "cozo-node"
version = "0.1.4"
description = "Cozo database for NodeJS"
authors = ["Ziyang Hu"]
license = "MIT/Apache-2.0/BSD-3-Clause"
edition = "2021"
exclude = ["index.node"]

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[features]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozo = { version = "0.1.4" }
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api"]
